--- a/docker/dev-configs/docker-compose.yml
+++ b/docker/dev-configs/docker-compose.yml
@@ -40,6 +40,9 @@ services:
       KEY: '255d861b-5ea1-5996-9aa3-922530ec40b1'
       SECRET: '6116487b-cda1-52c2-b5b5-c8022c45e263'
 
+      CORS_ENABLED: true
+      CORS_ORIGIN: true
+
       DB_CLIENT: 'postgres'
       DB_HOST: 'database'
       DB_PORT: '5432'
